gccida/g1/change_address_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2376:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  change_address_1( rtx memref, machine_mode mode, rtx addr, int validate) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2378:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2380:4: error: expected ';' after expression
rtx v6; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2380:5: error: use of undeclared identifier 'v6'
rtx v6; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2406:50: error: use of undeclared identifier 'v6'
if ( !rtx_equal_p( rtx, memref->fld[0].rtx) || ( v6 = memref, *( ( unsigned __int8 *)memref + 2) != v4) ) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2408:1: error: use of undeclared identifier 'v6'
v6 = gen_rtx_MEM( v4, rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2409:50: error: use of undeclared identifier 'v6'
v7 = *( ( _BYTE *)memref + 3) & 8 | *( ( _BYTE *)v6 + 3) & 0xF7; 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2410:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = v7; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2412:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = v8; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2414:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = v9; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2416:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = v10; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2417:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = *( ( _BYTE *)memref + 3) & 1 | v10 & 0xFE; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2418:14: error: use of undeclared identifier 'v6'
*( _QWORD *)&v6[1] = memref[1]; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/emit-rtl.c:2420:8: error: use of undeclared identifier 'v6'
return v6; 
       ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/change_address_1/src/obj/emit-rtl.o] Error 1
